<resources>
    <string name="app_name">GloryApps</string>
    <!-- Strings related to login -->
    <string name="login_form">Login</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">Sign in</string>
    <string name="total_data_service">Total Data: %1$d</string>
    <string name="tv_title_history">History Service</string>
    <string name="tv_title_history_dalem">Semua data</string>
    <!-- String related to Home-->
    <string name="welcome">Welcome Aboard Captain</string>
    <string name="home">Home</string>
    <string name="latest_service">Latest Service</string>
    <string name="stock_info">Info Stock</string>
    <string name="float_btn">Add</string>

    <!--String for Bottom Nav-->
    <string name="b_leader">Leaderboard</string>
    <string name="b_home">Home</string>
    <string name="b_search">Search</string>
    <string name="b_profile">Profile</string>
    <string name="b_setting">Settings</string>

    <!--String for Add-->
    <string name="i_add">InputService</string>
    <string name="t_date">Tanggal</string>
    <string name="t_hp">Type HP</string>
    <string name="t_rsk">Kerusakan</string>
    <string name="t_hrg">Harga</string>
    <string name="t_penerima">Penerima</string>
    <string name="t_Status">STATUS</string>
    <string name="t_Kerjaan">Pengerjaan</string>
    <string name="h_penerima">Masukan Nama Penerima</string>
    <string name="h_date">Tanggal Masuk</string>
    <string name="h_dateK">Tanggal Keluar</string>
    <string name="h_hp">Masukan Type HP</string>
    <string name="h_rsk">Masukan Jenis Kerusakan</string>
    <string name="h_hrg">Masukan Harga</string>
    <string name="h_mdl">Masukan Harga Modal</string>
    <string name="b_input">Input</string>
    <string name="h_terima">Masukan Nama Penerima</string>
    <string name="b_history">History</string>
    <string name="h_status">Masukan Status Service</string>
    <string name="b_simpan">Simpan</string>
    <string name="tv_edit">Edit Service</string>
    <!--String For Home-->
    <string name="t_list">List Service</string>
    <string name="j_tgl">Tanggal</string>
    <string name="j_hp">Type HP</string>
    <string name="j_rsk">Kerusakan</string>
    <string name="j_hrg">Harga</string>
    <string name="nama_seli">marcelina</string>
    <string name="nama_sindy">sindy</string>
    <string name="nama_war">wardah</string>
    <string name="nama_hil">hilda</string>
    <string name="nama_aldi">aldi</string>

    <string-array name="nama_penerima">
        <item>marcelina</item>
        <item>sindy</item>
        <item>wardah</item>
        <item>hilda</item>
        <item>aldi</item>
        <item>richard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lunas">LUNAS</string>
    <string name="cancel">CANCEL</string>
    <string name="tanggal">TANGGAL</string>
    <string name="pencarian">Pencarian?</string>
    <string name="history_semua_data">HISTORY SEMUA DATA</string>
    <string name="history_data_lunas">HISTORY DATA LUNAS</string>
    <string name="history_data_cancel">HISTORY DATA CANCEL</string>
    <string name="history_data_tgl">HISTORY TGL: %s</string>
    <string name="input_transferan">Input Transferan</string>
    <string name="tanggal_transfer">Tanggal Transfer</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="masukan_nama_bank">masukan nama bank</string>
    <string name="nama">Nama</string>
    <string name="masukan_nama_tujuan">masukan nama tujuan</string>
    <string name="norek_tujuan">noRek tujuan</string>
    <string name="nomor_rekening_tujuan">Nomor Rekening Tujuan</string>
    <string name="nominal_tf">Nominal TF</string>
    <string name="nominal_transfer">Nominal Transfer</string>
    <string name="transferan_siapa">Transferan Siapa?</string>
    <string name="silahkan_pilih_tanggal">Silahkan Pilih Tanggal</string>
    <string name="backbutton">backButton</string>
    <string name="tanggal_keluar">Tanggal Keluar</string>
    <string name="edit_transfer">EDIT TRANSFER</string>
    <string name="bank_tujuan">Bank tujuan</string>
    <string name="nama_tujuan">Nama Tujuan</string>
    <string name="transferan_punya">Transferan Punya</string>
    <string name="total_serpisan">Total Serpisan:</string>
    <string name="sorting">sorting</string>
    <string name="pp">pp</string>
    <string name="totalpoint">TotalPoint :</string>
    <string name="peringkat">Peringkat</string>
    <string name="service">SERVICE</string>
    <string name="title">title</string>
    <string name="input">INPUT</string>
    <string name="edit">EDIT</string>
    <string name="mutasi">Mutasi</string>
    <string name="transfer">TRANSFER</string>
    <string name="content">content</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="topfrag">TopFrag :</string>
    <string name="seli">seli</string>
    <string name="profile">Profile</string>
    <string name="logout">LOGOUT!!!</string>
    <string name="samsung_s20_ultra_plus">Samsung s20 Ultra plus</string>
    <string name="in">IN:</string>
    <string name="_31_12_2022">31/12/2022</string>
    <string name="out">OUT:</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pengerjaan">Pengerjaan:</string>
    <string name="ibnu">IBNU</string>
    <string name="penerima">Penerima:</string>
    <string name="rraf">Rraf</string>
    <string name="ganti_lcd_sama_pasang_batre_sama_ganti_simtray">Ganti LCD sama Pasang Batre sama ganti simtray</string>
    <string name="modal">Modal:</string>
    <string name="rp">Rp</string>
    <string name="harga">Harga:</string>
    <string name="_220_000">220.000</string>
    <string name="_20_000">20.000</string>
    <string name="wardah">WARDAH</string>
    <string name="point">Point:</string>
    <string name="_999999">999999</string>
    <string name="rafi_anggoro">Rafi Anggoro</string>
    <string name="bank">Bank:</string>
    <string name="mandiri">MANDIRI</string>
    <string name="_26_04_1999">26/04/1999</string>
    <string name="norek">NoRek:</string>
    <string name="_16721721721765">16721721721765</string>
    <string name="punya">Punya:</string>
    <string name="downline">Downline</string>
    <string name="nominal">Nominal:</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="type_hp_a_z">Type Hp A - Z</string>
    <string name="cari">cari</string>
    <string name="penukaranpoint">TukarPoint</string>
    <string name="silahkan_pilih_nama">Silahkan Pilih Nama</string>
    <string name="total_point">TOTAL POINT</string>
    <string name="_9_999_999">9,999,999</string>
    <string name="history">history</string>
    <string name="redeem">Redeem</string>
    <string name="saldo_shopeepay">SALDO SHOPEEPAY</string>
    <string name="redeem_point">REDEEM POINT</string>
    <string name="bantu_teman_kami">BANTU TEMAN KITA</string>
    <string name="redeem_point_ke">Redeem Point ke %s</string>
    <string name="masukan_nomor_tujuan">Masukan Nomor Tujuan</string>
    <string name="masukan_nominal">Masukan Nominal</string>
    <string name="masukan_nama_peredeem">Masukan Nama PeRedeem</string>
    <string name="total_point_terredeem">Total Point TerRedeem: %s</string>
    <string name="history_redeem_point">History Redeem Point</string>
    <string name="penukaran_ke_shopeepay">Penukaran ke: %s</string>
    <string name="jumlah_penukaran">Jumlah Penukaran: %s</string>
    <string name="nomor_tujuan">Nomor Tujuan: %s</string>
    <string name="sn">SN: %1$d</string>
    <string name="nama_penukar">Nama Penukar: %s</string>
    <string name="berhasil">BERHASIL</string>
    <string name="msg_token_fmt">Token Anda adalah: %s</string>
    <string name="version_666_666_666_beta">version: %s</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="role_admin">ROLE: Admin</string>
    <string name="edit_pengguna">Edit Pengguna</string>
    <string name="cuti">Cuti</string>
    <string name="edit_sesuatu">EDIT SESUATU</string>
    <string name="set_redeem_point">Set Redeem Point</string>
    <string name="tambah_hapus_nama_penerima">Tambah/Hapus Nama Penerima</string>
    <string name="masukan_nama_penerima_baru">Masukan Nama Penerima Baru</string>
    <string name="hapus_penerima">Hapus Penerima</string>
    <string name="absensi">ABSENSI</string>
    <string name="absen">Absen</string>
    <string name="absen_di_sini">ABSEN DI SINI</string>
    <string name="absen_sebagai">Absen Sebagai</string>
    <string name="cek_absen_di_sini">Cek Absen %s</string>
    <string name="nama_s">Nama: %s</string>
    <string name="tanggal_s">Tanggal: %s</string>
    <string name="jam_s">Jam: %s</string>
    <string name="status_keharian_s">Status Kehardian: %s</string>
    <string name="pilih_nama">Pilih Nama</string>
    <string name="tepatwaktu">TepatWaktu</string>
    <string name="terlambat">Terlambat</string>
    <string name="lain_lain">Lain-Lain</string>
    <string name="cek_absen">CekDisini</string>
    <string name="semua_data">Semua Data</string>
</resources>