<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/n_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/b_home"/>

    <item
        android:id="@+id/n_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/b_history"/>

    <item
        android:id="@+id/n_leaderboard"
        android:icon="@drawable/ic_baseline_format_list_numbered_24"
        android:title="@string/b_leader"/>

    <item
        android:id="@+id/n_point"
        android:icon="@drawable/ic_baseline_card_giftcard_24"
        android:title="@string/penukaranpoint"/>

    <item
        android:id="@+id/n_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/b_setting"/>

</menu>