<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Material3.Dark.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tv_edit"
        android:textStyle="bold"
        android:textSize="35sp"
        android:background="@color/orange_base_50"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:boxBackgroundColor="@android:color/background_light"
    android:textColorHint="@color/black">

    <EditText
        android:id="@+id/eTgl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:textColor="@color/black"
        android:enabled="false"
        android:hint="@string/h_date"
        android:inputType="date"
        android:textSize="15sp"
        android:autofillHints="" />
</com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cveTglK"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@android:color/background_light"
        >
        <TextView
        android:textColorHint="@color/black"
            android:id="@+id/eTglK"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:hint="@string/tanggal_keluar"
            android:textStyle="bold"
            android:textSize="15sp"
            />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/eHp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:enabled="false"
            android:hint="@string/h_hp"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/eRsk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/h_rsk"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/eMdl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:enabled="true"
            android:hint="@string/h_mdl"
            android:inputType="number"
            android:textSize="15sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black"
        >

        <EditText
            android:id="@+id/eHrg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/h_hrg"
            android:inputType="number"
            android:textSize="15sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black"
        app:hintTextColor="#000">
        <EditText
            android:id="@+id/eTerima"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:enabled="false"
            android:hint="@string/h_terima"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvkerjaan"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/background_light"
        android:textColorHint="@color/black"
        android:hint="@string/t_Kerjaan"
        app:layout_constraintTop_toBottomOf="@+id/iHrg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/eKerjaan"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@android:color/background_light"
            android:textColorHint="@color/black"
            android:padding="5dp"
            android:id="@+id/tvstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_Status"
            app:layout_constraintTop_toBottomOf="@+id/iHrg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/eStatus"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/b_simpan"
        android:layout_gravity="end"
        />


</LinearLayout>